--- a/POC_Access_Unity/.editorconfig
+++ b/POC_Access_Unity/.editorconfig
@@ -19,7 +19,7 @@ insert_final_newline = false
 #### Conventions de codage .NET ####
 
 # Organiser les instructions Using
-dotnet_separate_import_directive_groups = false
+dotnet_separate_import_directive_groups = true
 dotnet_sort_system_directives_first = true
 file_header_template = unset
 
